# interpro7-dw

./: .gitignore  MANIFEST.in  README.md  body.json  config.ini  config.toml  properties.json  pyproject.toml  requirements.txt  setup.py
i7dw/: __init__.py  cdd.py  cli.py  dbms.py  disk.py  ebisearch.py  elastic.py  goa.py  hmmer.py  intact.py  io.py  kegg.py  metacyc.py  mysql.py  pdbe.py  pfam.py  uniprot.py  xref.py
i7dw/ebi/: ebisearch.py  goa.py  hmmer.py  interpro.py  pdbe.py  uniprot.py
i7dw/interpro/: __init__.py  elastic.py  export.py  mysql.py  oracle.py  supermatch.py  xref.py
i7dw/interpro/elastic/: __init__.py  body.json  index.py  indices.json  organize.py  relationship.py  search.py  utils.py
i7dw/interpro/mysql/: __init__.py  database.py  databases.py  entries.py  entry.py  protein.py  proteins.py  proteome.py  proteomes.py  relnote.py  relnotes.py  structure.py  structures.py  taxonomy.py  utils.py
interpro7dw/: __init__.py  alphafold.py  bfvd.py  cli.py  cli2.py  ebisearch.py  hmmer.py  intact.py  kegg.py  lookup.py  metacyc.py  pdbe.py  pfam.py  utils.py  wikipedia.py
interpro7dw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
interpro7dw/ebi/: ebisearch.py  goa.py  intact.py  pdbe.py  pfam.py  uniprot.py
interpro7dw/interpro/: __init__.py  lookup.py  oldxrefs.py  utils.py  xrefs.py
interpro7dw/oracle/: interpro.py  uniprot.py
interpro7dw/uniprot/: __init__.py  goa.py  misc.py  proteins.py  proteomes.py
interpro7dw/utils/: __init__.py  mysql.py  oracle.py  pgsql.py  store.py  tempdir.py
(+99 files in other folders)
