[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "interpro7-dw"
version = "0.16.2"
description = "InterPro7 data warehouse builder."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "elasticsearch~=8.12",
    "mundone~=0.8",
    "mysqlclient~=2.2",
    "oracledb~=2.4"
]

[project.scripts]
interprodw-build = "interpro7dw.cli:build"
